--- a/html/dwz_foot.html
+++ b/html/dwz_foot.html
@@ -8,6 +8,9 @@ Copyright &copy; 2019-2020 字符云监控. &nbsp;
 <a style='text-decoration:underline;' href='http://xrkmonitor.com' target='_blank'>云版本</a>&nbsp;
 . (建议使用 Chrome 或者 Firefox 浏览器)
 
+<ul class="themeList" id="themeList" style='display:none'>
+    <li theme="toptry"><div></div></li>
+</ul>
 
 <div id='df_dlg_show_connect' style='display:none'>
 	<div align='center' style='height:360px'>
