--- a/html/dmt_master_page.html
+++ b/html/dmt_master_page.html
@@ -4,7 +4,7 @@
 			<table width="100%" align='center' class="list" style="margin-top:1px">
 				<thead>
 					<tr>
-						<th colspan="2" style='height:28px; font-size:16px; text-align:center;font-weight:bold;'>
+						<th colspan="2" class='list_table_title'>
 						账号概况
 						</th>
 					</tr>
