--- a/html/dmt_user_center.html
+++ b/html/dmt_user_center.html
@@ -58,7 +58,7 @@ tton></div></div></li>
 				<table width="100%" align="center" class="list" style="margin-top:2px">
 					<thead>
 						<tr>
-							<th colspan="3" style='height:28px; font-size:16px; text-align:center;font-weight:bold;'>
+							<th colspan="3" class='list_table_title'>
 							账号信息
 							</th>
 						</tr>
@@ -128,9 +128,7 @@ tton></div></div></li>
 				<table width="100%" align="center" class="list" style="margin-top:2px">
 					<thead>
 						<tr>
-							<th colspan="5" style='height:28px; font-size:16px; text-align:center;font-weight:bold;'>
-							最近登陆历史记录
-							</th>
+							<th colspan="5" class='list_table_title'> 最近登陆历史记录 </th>
 						</tr>
 						<tr>
 							<th class="ucPageTdVal">序 号</th>
