--- a/html/dwz_container.html
+++ b/html/dwz_container.html
@@ -1,3 +1,21 @@
+<div id='dct_dlg_show_daemon_tip_msg' style='display:none'>
+    <div align='left' style='margin-left:20px' layoutH="32">
+        <br />
+		<br />
+		<font style='font-size:16px;'>尊敬的用户您好：</font>
+		<br />
+		<br />
+		<font color='red' style='font-size:16px;margin-left:10px'>此为演示版本，您的操作已被禁止</font>
+		<br />
+		<br />
+    </div>
+    <div class="formBar">
+        <ul>
+			<li><button type="button" class="buttonActive close">关闭</button></li>
+        </ul>
+    </div>
+</div>
+
 <div id="leftside">
 	<div id="sidebar_s"><i class="icon-reorder icon-large"></i></div>
 	<div id="sidebar">
