--- a/html/dwz_icons.html
+++ b/html/dwz_icons.html
@@ -14,13 +14,50 @@
 <meta name="viewport" content="width=device-width,initial-scale=0.6">
 <title>字符云监控系统</title>
 <link href="/xrkmonitor/resource/font-awesome/css/font-awesome.min.css?v=12" rel="stylesheet"/>
+<link href="/xrkmonitor/resource/themes/iconfont/iconfont.css?v=12" rel="stylesheet"/>
 <style>
 a { margin-left:5px; }
 </style>
 
 </head>
 
-<ul>
+<a><i class="iconfont iconfont-search"></i></a>
+<a><i class="iconfont iconfont-user-full"></i></a>
+<a><i class="iconfont iconfont-arrow-right"></i></a>
+<a><i class="iconfont iconfont-edit"></i></a>
+<a><i class="iconfont iconfont-arrow-bottom"></i></a>
+<a><i class="iconfont iconfont-refresh"></i></a>
+<a><i class="iconfont iconfont-min"></i></a>
+<a><i class="iconfont iconfont-file-up"></i></a>
+<a><i class="iconfont iconfont-content"></i></a>
+<a><i class="iconfont iconfont-more"></i></a>
+<a><i class="iconfont iconfont-key"></i></a>
+<a><i class="iconfont iconfont-file-down"></i></a>
+<a><i class="iconfont iconfont-next"></i></a>
+<a><i class="iconfont iconfont-upload"></i></a>
+<a><i class="iconfont iconfont-date"></i></a>
+<a><i class="iconfont iconfont-more-show"></i></a>
+<a><i class="iconfont iconfont-batch"></i></a>
+<a><i class="iconfont iconfont-more-ver"></i></a>
+<a><i class="iconfont iconfont-link"></i></a>
+<a><i class="iconfont iconfont-arrow-top"></i></a>
+<a><i class="iconfont iconfont-error"></i></a>
+<a><i class="iconfont iconfont-delete"></i></a>
+<a><i class="iconfont iconfont-prev"></i></a>
+<a><i class="iconfont iconfont-restore"></i></a>
+<a><i class="iconfont iconfont-max"></i></a>
+<a><i class="iconfont iconfont-page"></i></a>
+<a><i class="iconfont iconfont-clear"></i></a>
+<a><i class="iconfont iconfont-order"></i></a>
+<a><i class="iconfont iconfont-show"></i></a>
+<a><i class="iconfont iconfont-user"></i></a>
+<a><i class="iconfont iconfont-retract"></i></a>
+<a><i class="iconfont iconfont-reset"></i></a>
+<a><i class="iconfont iconfont-close"></i></a>
+
+<br />
+<br />
+
 <a><i class="icon icon-glass icon-4x"></i>icon icon-glass </a>
 <a><i class="icon icon-music icon-4x"></i>icon icon-music </a>
 <a><i class="icon icon-search icon-4x"></i>icon icon-search </a>
