--- a/html/dmt_log_files.html
+++ b/html/dmt_log_files.html
@@ -1,17 +1,17 @@
 <div class="pageHeader">
 	<div class="searchBar">
 		<ul class="searchContent"> 
-			<li width="240px" valign='center'>
+			<li>
 				<label>应用名称：</label>
 				<select name="dlf_appName" id="dlf_appName" style="width:160px;">
 					<option value="-">-</option>
 				</select>
 			</li>
-			<li width="150px"> 
+			<li>
 				<label>占用磁盘空间：</label>
 				<font id="logSizeTotal" style="color:blue"></font>
 			</li>
-			<li width="120px">
+			<li>
 				<label>日志文件数：</label>
 				<font id="logFilesTotal" style="color:blue"></font>
 			</li>
@@ -20,6 +20,8 @@
 				<font id="logTotal" style="color:blue"></font>
 			</li>
 		</ul>
+		<div class='subBar'>
+		</div>
 	</div>
 </div>
 
