--- a/html/dmt_showview_battr.html
+++ b/html/dmt_showview_battr.html
@@ -28,7 +28,7 @@ function dsbAfterAttrOpr_<?cs var:config.view_id ?>(json)
 				</ul>
 			</div>
 		</div>
-		<div class="tabsContent" style="height:400px;" id="dsb_attr">
+		<div class="tabsContent" style="height:400px;overflow-x:hidden" id="dsb_attr">
 			<div id="dsb_bind_attr_list_<?cs var:config.view_id ?>"> <!-- tab 0 bind attr list -->
 			<?cs include:config.cspath+"dmt_showview_bind_attr.html" ?>
 			</div> <!-- tab 0 bind attr list end -->
