--- a/html/dmt_login_varcss.html
+++ b/html/dmt_login_varcss.html
@@ -11,81 +11,76 @@
 	<meta name="renderer" content="webkit">
 
 	<link href="<?cs var:config.docpath?>resource/font-awesome/css/font-awesome.min.css?v=66" rel="stylesheet"/>
-	<link href="<?cs var:config.docpath?>resource/themes/css/login.css?v=20200508" rel="stylesheet" />
+	<link href="<?cs var:config.docpath?>resource/themes/css/login.css?v=20500507" rel="stylesheet" />
 	<?cs if:config.xrkmonitor_debug==1 ?>
 	<link href="<?cs var:config.docpath?>resource/layui/css/layui.css" rel="stylesheet" />
-    <link href="<?cs var:config.docpath?>resource/sideshow/css/normalize.css" rel="stylesheet" />
-    <link href="<?cs var:config.docpath?>resource/sideshow/css/demo.css" rel="stylesheet" />
-    <link href="<?cs var:config.docpath?>resource/sideshow/css/component.css" rel="stylesheet" />
+	<link rel="stylesheet" type="text/css" href="<?cs var:config.docpath?>login/css/base.css?v=1" />
 	<?cs else ?>
 	<link href="<?cs var:config.docpath?>resource/layui/css/layui.min.css?v=20200506" rel="stylesheet" />
-    <link href="<?cs var:config.docpath?>resource/sideshow/css/sideshow.min.css?v=20200506" rel="stylesheet" />
+	<link rel="stylesheet" type="text/css" href="<?cs var:config.docpath?>login/css/base.css?v=1" />
 	<?cs /if ?>
 </head>
 
-<body class="kit-login-bg" style='overflow:hidden'>
-<div class="container demo-1">
-    <div class="content">
-        <div id="large-header" class="large-header">
-            <canvas id="demo-canvas"></canvas>
-            <div class="kit-login-box">
-                <header>
-					<img src='<?cs var:config.docpath?>/images/login_show.png' style='float:left;padding-bottom:5px' width='64px' height='40px' />
-					<?cs if:config.isdaemon == 1 ?>
-                    <h2>字符云监控系统 - 演示版</h2>
-					<?cs else ?>
-                    <h2>字符云监控系统</h2>
-					<?cs /if ?>
-                </header>
-                <div class="kit-login-main">
-                    <div class="layui-form" method="get">
-                        <div class="layui-form-item">
-                            <label class="kit-login-icon">
-                                <i class="layui-icon">&#xe612;</i>
-                            </label>
-							<?cs if:config.free_uname ?>
-                            <input type="text" id="username" lay-verify="userKey" autocomplete="off" value='<?cs var:config.free_uname ?>' class="layui-input">              
-							<?cs else ?>
-                            <input type="text" id="username" lay-verify="userKey" autocomplete="off" placeholder="输入用户名" class="layui-input">              
-							<?cs /if ?>
-                        </div>
-                        <div class="layui-form-item">
-                            <label class="kit-login-icon">
-                                <i class="layui-icon">&#xe6b1;</i>
-                            </label>
-							<?cs if:config.free_upass ?>
-                            <input type="password" id="password" lay-verify="password" autocomplete="off" value='<?cs var:config.free_upass ?>' class="layui-input">             
-							<?cs else ?>
-                            <input type="password" id="password" lay-verify="password" placeholder="输入密码" autocomplete="off" class="layui-input">             
-							<?cs /if ?>
-                        </div>
-                        <div class="layui-form-item">
-                            <div class="kit-pull-right">
-                                <button id='btn_login' onClick='return login_submit();' class="layui-btn layui-btn-primary" lay-submit lay-filter="login">
-                                    <i class="fa fa-sign-in " aria-hidden="true"></i> 登 入
-                                </button>                               
-                                <button id='btn_clear' onClick='return clear_input();' class="layui-btn layui-btn-primary" lay-submit lay-filter="login">
-                                    <i class="fa fa-sign-in" aria-hidden="true"></i> 重 填 
-                                </button>                               
-                            </div>
-                        </div>
-                        <div class="layui-form-item" align='center' style='height:20px'>
-							<font id="loginmsg" style='font-weight:bold;font-size:14px;'></font>
-						</div>
+<body class="cda-removeleft cda-naked cda-noimg">
+    <div>
+		<main> <div id="login_app"></div> </main>
+        <div class="kit-login-box">
+            <header>
+				<img src='<?cs var:config.docpath?>/images/login_show.png' style='float:left;padding-bottom:5px' width='64px' height='40px' />
+				<?cs if:config.isdaemon == 1 ?>
+                <h2>字符云监控系统 - 演示版</h2>
+				<?cs else ?>
+                <h2>字符云监控系统</h2>
+				<?cs /if ?>
+            </header>
+            <div class="kit-login-main" style='margin-bottom:20px'>
+                <div class="layui-form" method="get">
+                    <div class="layui-form-item">
+                        <label class="kit-login-icon">
+                            <i class="layui-icon">&#xe612;</i>
+                        </label>
+						<?cs if:config.free_uname ?>
+                        <input type="text" id="username" lay-verify="userKey" autocomplete="off" value='<?cs var:config.free_uname ?>' class="layui-input">              
+						<?cs else ?>
+                        <input type="text" id="username" lay-verify="userKey" autocomplete="off" placeholder="输入用户名" class="layui-input">              
+						<?cs /if ?>
                     </div>
+                    <div class="layui-form-item">
+                        <label class="kit-login-icon">
+                            <i class="layui-icon">&#xe6b1;</i>
+                        </label>
+						<?cs if:config.free_upass ?>
+                        <input type="password" id="password" lay-verify="password" autocomplete="off" value='<?cs var:config.free_upass ?>' class="layui-input">             
+						<?cs else ?>
+                        <input type="password" id="password" lay-verify="password" placeholder="输入密码" autocomplete="off" class="layui-input">             
+						<?cs /if ?>
+                    </div>
+                    <div class="layui-form-item">
+                        <div class="kit-pull-right">
+                            <button id='btn_login' onClick='return login_submit();' class="layui-btn layui-btn-primary" lay-submit lay-filter="login">
+                                <i class="fa fa-sign-in"></i> 登 入
+                            </button>                               
+                            <button id='btn_clear' onClick='return clear_input();' class="layui-btn layui-btn-primary" lay-submit lay-filter="login">
+                                <i class="fa fa-sign-in"></i> 重 填 
+                            </button>                               
+                        </div>
+                    </div>
+                    <div class="layui-form-item" align='center' style='height:20px'>
+						<font id="loginmsg" style='font-weight:bold;font-size:14px;'></font>
+					</div>
                 </div>
-				<footer>
-					<?cs if:config.isdaemon == 1 ?>
-					<button disabled style='float:left;width:120px;margin-left:10px;' class='layui-btn layui-btn-sm' title='站点访问数据展示'><i class="icon-bar-chart icon-large"></i><?cs var:config.today_acc ?> / <?cs var:config.total_acc ?></button>
-					<?cs else ?>
-					<button disabled style='float:left;width:120px;margin-left:10px;' class='layui-btn layui-btn-sm' title='站点访问数据'><i class="icon-bar-chart icon-large"></i><?cs var:config.today_acc ?> / <?cs var:config.total_acc ?></button>
-					<?cs /if ?>
-					<button title='监控系统云版本' style='position:static; margin-left:35px; font-color:#2f3e56; float:right;' class="layui-btn layui-btn-sm" onClick='goto_online();'><i class="icon-home icon-large"></i>云版本</button>
-				</footer>
             </div>
+			<footer>
+				<?cs if:config.isdaemon == 1 ?>
+				<button disabled style='float:left;width:120px;margin-left:10px;' class='layui-btn layui-btn-sm' title='站点访问数据展示'><i class="icon-bar-chart icon-large"></i><?cs var:config.today_acc ?> / <?cs var:config.total_acc ?></button>
+				<?cs else ?>
+				<button disabled style='float:left;width:120px;margin-left:10px;' class='layui-btn layui-btn-sm' title='站点访问数据'><i class="icon-bar-chart icon-large"></i><?cs var:config.today_acc ?> / <?cs var:config.total_acc ?></button>
+				<?cs /if ?>
+				<button title='监控系统云版本' style='position:static; margin-left:35px; font-color:#2f3e56; float:right;' class="layui-btn layui-btn-sm" onClick='goto_online();'><i class="icon-home icon-large"></i>云版本</button>
+			</footer>
         </div>
     </div>
-</div>
+</body>
 
 <?cs if:config.isdaemon == 1 ?>
 <script src="<?cs var:config.docpath?>js/dmt_xrkmonitor.js"></script>
@@ -95,9 +90,6 @@
 <script src="<?cs var:config.docpath?>resource/js/jquery.js?v=1"></script>
 <script src="<?cs var:config.docpath?>resource/js/jquery.md5.js"></script>
 <script src="<?cs var:config.docpath?>resource/js/jquery.cookie.js"></script>
-<script src="<?cs var:config.docpath?>resource/js/sideshow/TweenMax.js"></script>
-<script src="<?cs var:config.docpath?>resource/js/sideshow/rAF.js"></script>
-<script src="<?cs var:config.docpath?>resource/js/sideshow/demo-2.js"></script>
 <script src="<?cs var:config.docpath?>resource/js/dmt.comm.js" type="text/javascript"></script>
 <?cs else ?>
 <script src="<?cs var:config.docpath?>resource/js/jquery.min.js?v=2020506"></script>
@@ -107,6 +99,8 @@
 <?cs /if ?>
 
 <script language="javascript" type="text/javascript">
+	dltSetLoginPos();
+
 	var g_req_timestamp = 0;
 	var g_login_in_cust_server = 0;
 
@@ -188,6 +182,25 @@
 		return false;
 	}
 
+	function dltSetLoginPos() {
+		$(".kit-login-box").css("position", "relative");
+		$(".kit-login-box").css("float", "left");
+		var w = $(window).width();
+		var h = $(window).height();
+		if(w > 390) {
+			var p=(w-390)/2;
+			$(".kit-login-box").css("margin-left", ''+p+'px');
+		}
+		if(h > 330) {
+			var p=(h-330)/3;
+			$(".kit-login-box").css("margin-top", ''+p+'px');
+		}
+	}
+
+	$(window).resize(function(){
+		dltSetLoginPos();
+	});
+
 	$(document).ready(function(){
 		<?cs if:config.isdaemon ?>
 			<?cs if:config.free_uname ?>
@@ -205,7 +218,7 @@
 		}
 	});
 </script>
+<?cs include:config.cspath+"dmt_login_show_varcss.html" ?>
 
-</body>
 </html>
 
