--- a/html/dwz_header.html
+++ b/html/dwz_header.html
@@ -1,4 +1,4 @@
-<a class="logo" href="#"><img src="<?cs var:config.docpath ?>resource/xrk_logo.png"/></a>
+<a class="logo" href="http://xrkmonitor.com" target='_blank'><img src="<?cs var:config.docpath ?>resource/xrk_logo.png"/></a>
 <ul class="nav">
 	<li><a href="<?cs var:config.cgipath?>mt_slog_user?action=init_change_pwd" mask=true maxable=false
 		target="dialog" width="420" height="260"><i class="icon-key icon-large"></i>修改密码</a></li>
