--- a/html/dmt_login_show_varcss.html
+++ b/html/dmt_login_show_varcss.html
@@ -1,76 +1,98 @@
+
 <script src="<?cs var:config.docpath?>login/js/three.min.js"></script>
 <script src="<?cs var:config.docpath?>login/js/postprocessing.min.js"></script>
 <script src="<?cs var:config.docpath?>login/js/InfiniteLights.js?v=1"></script>
 <script src="<?cs var:config.docpath?>login/js/Distortions.js?v=22"></script>
-<script>
-		(function() {
+<script language="javascript" type="text/javascript">
+	function dltSetLoginPos() {
+		$(".kit-login-box").css("position", "relative");
+		$(".kit-login-box").css("float", "left");
+		var w = $(window).width();
+		var h = $(window).height();
+		if(w > 390) {
+			var p=(w-390)/2;
+			$(".kit-login-box").css("margin-left", ''+p+'px');
+		}
+		if(h > 300) {
+			var p=(h-300)/3;
+			$(".kit-login-box").css("margin-top", ''+p+'px');
+		}
+	}
 
-			const container = document.getElementById('login_app');
+	$(window).resize(function(){
+		dltSetLoginPos();
+	});
 
-			const options = {
-				onSpeedUp: (ev) => {					
-				},
-				onSlowDown: (ev) => {
-				},
-				// mountainDistortion || LongRaceDistortion || xyDistortion || turbulentDistortion || turbulentDistortionStill || deepDistortionStill || deepDistortion
-				distortion: deepDistortion, 
-				
-				length: 400,
-				roadWidth: 9,
-				islandWidth: 2,
-				lanesPerRoad: 3,
+	dltSetLoginPos();
 
-				fov: 90,
-				fovSpeedUp: 150,
-				speedUp: 2,
-				carLightsFade: 0.4,
+	(function() {
 
-				totalSideLightSticks: 50,
-				lightPairsPerRoadWay: 50,
+		const container = document.getElementById('login_app');
 
-				// Percentage of the lane's width
-				shoulderLinesWidthPercentage: 0.05,
-				brokenLinesWidthPercentage: 0.1,
-				brokenLinesLengthPercentage: 0.5,
+		const options = {
+			onSpeedUp: (ev) => {					
+			},
+			onSlowDown: (ev) => {
+			},
+			// mountainDistortion || LongRaceDistortion || xyDistortion || turbulentDistortion || turbulentDistortionStill || deepDistortionStill || deepDistortion
+			distortion: deepDistortion, 
+			
+			length: 400,
+			roadWidth: 9,
+			islandWidth: 2,
+			lanesPerRoad: 3,
 
-				/*** These ones have to be arrays of [min,max].  ***/
-				lightStickWidth: [0.12, 0.5],
-				lightStickHeight: [1.3, 1.7],
+			fov: 90,
+			fovSpeedUp: 150,
+			speedUp: 2,
+			carLightsFade: 0.4,
 
-				movingAwaySpeed: [60, 80],
-				movingCloserSpeed: [-120, -160],
+			totalSideLightSticks: 50,
+			lightPairsPerRoadWay: 50,
 
-				/****  Anything below can be either a number or an array of [min,max] ****/
+			// Percentage of the lane's width
+			shoulderLinesWidthPercentage: 0.05,
+			brokenLinesWidthPercentage: 0.1,
+			brokenLinesLengthPercentage: 0.5,
 
-				// Length of the lights. Best to be less than total length
-				carLightsLength: [400 * 0.05, 400 * 0.15],
-				// Radius of the tubes
-				carLightsRadius: [0.05, 0.14],
-				// Width is percentage of a lane. Numbers from 0 to 1
-				carWidthPercentage: [0.3, 0.5],
-				// How drunk the driver is.
-				// carWidthPercentage's max + carShiftX's max -> Cannot go over 1. 
-				// Or cars start going into other lanes 
-				carShiftX: [-0.2, 0.2],
-				// Self Explanatory
-				carFloorSeparation: [0.05, 1],
+			/*** These ones have to be arrays of [min,max].  ***/
+			lightStickWidth: [0.12, 0.5],
+			lightStickHeight: [1.3, 1.7],
 
-				colors: {
-					roadColor: 0x080808,
-					islandColor: 0x0a0a0a,
-					background: 0x000000,
-					shoulderLines: 0x131318,
-					brokenLines: 0x131318,
-					/***  Only these colors can be an array ***/
-					leftCars: [0xE2173C, 0x841010, 0xF23D3D],
-					rightCars: [0xffffff, 0x7686BF, 0x1338B5],
-					sticks: 0xDCE0EE,
-				}
-			};
+			movingAwaySpeed: [60, 80],
+			movingCloserSpeed: [-120, -160],
 
-			const myApp = new App(container, options);
-			myApp.loadAssets().then(myApp.init)
-		})();
+			/****  Anything below can be either a number or an array of [min,max] ****/
+
+			// Length of the lights. Best to be less than total length
+			carLightsLength: [400 * 0.05, 400 * 0.15],
+			// Radius of the tubes
+			carLightsRadius: [0.05, 0.14],
+			// Width is percentage of a lane. Numbers from 0 to 1
+			carWidthPercentage: [0.3, 0.5],
+			// How drunk the driver is.
+			// carWidthPercentage's max + carShiftX's max -> Cannot go over 1. 
+			// Or cars start going into other lanes 
+			carShiftX: [-0.2, 0.2],
+			// Self Explanatory
+			carFloorSeparation: [0.05, 1],
+
+			colors: {
+				roadColor: 0x080808,
+				islandColor: 0x0a0a0a,
+				background: 0x000000,
+				shoulderLines: 0x131318,
+				brokenLines: 0x131318,
+				/***  Only these colors can be an array ***/
+				leftCars: [0xE2173C, 0x841010, 0xF23D3D],
+				rightCars: [0xffffff, 0x7686BF, 0x1338B5],
+				sticks: 0xDCE0EE,
+			}
+		};
+
+		const myApp = new App(container, options);
+		myApp.loadAssets().then(myApp.init)
+	})();
 </script>
 
 
