--- a/html/dmt_login.html
+++ b/html/dmt_login.html
@@ -33,7 +33,7 @@
 </head>
 
 <?cs if:config.login_show == "var_css" ?>
-<body class="cda-removeleft cda-naked cda-noimg">
+<body class="cda-removeleft cda-naked cda-noimg" style='overflow:hidden'>
 <?cs else ?>
 <body class="kit-login-bg demo-1" style='overflow:hidden'>
 <?cs /if ?>
