--- a/html/dmt_login_show_varcss.html
+++ b/html/dmt_login_show_varcss.html
@@ -64,75 +64,74 @@
 	});
 
 	dltSetLoginPos();
+		(function() {
+			const container = document.getElementById('login_app');
 
-	(function() {
+			const options = {
+				onSpeedUp: (ev) => {					
+				},
+				onSlowDown: (ev) => {
+				},
+				// mountainDistortion || LongRaceDistortion || xyDistortion || turbulentDistortion || turbulentDistortionStill || deepDistortionStill || deepDistortion
+				distortion: xyDistortion, 
+				
+				length: 400,
+				roadWidth: 9,
+				islandWidth: 2,
+				lanesPerRoad: 3,
 
-		const container = document.getElementById('login_app');
+				fov: 90,
+				fovSpeedUp: 150,
+				speedUp: 3,
+				carLightsFade: 0.4,
 
-		const options = {
-			onSpeedUp: (ev) => {					
-			},
-			onSlowDown: (ev) => {
-			},
-			// mountainDistortion || LongRaceDistortion || xyDistortion || turbulentDistortion || turbulentDistortionStill || deepDistortionStill || deepDistortion
-			distortion: deepDistortion, 
-			
-			length: 400,
-			roadWidth: 9,
-			islandWidth: 2,
-			lanesPerRoad: 3,
+				totalSideLightSticks: 50,
+				lightPairsPerRoadWay: 30,
 
-			fov: 90,
-			fovSpeedUp: 150,
-			speedUp: 2,
-			carLightsFade: 0.4,
+				// Percentage of the lane's width
+				shoulderLinesWidthPercentage: 0.05,
+				brokenLinesWidthPercentage: 0.1,
+				brokenLinesLengthPercentage: 0.5,
 
-			totalSideLightSticks: 50,
-			lightPairsPerRoadWay: 50,
+				/*** These ones have to be arrays of [min,max].  ***/
+				lightStickWidth: [0.02, 0.05],
+				lightStickHeight: [0.3, 0.7],
 
-			// Percentage of the lane's width
-			shoulderLinesWidthPercentage: 0.05,
-			brokenLinesWidthPercentage: 0.1,
-			brokenLinesLengthPercentage: 0.5,
+				movingAwaySpeed: [20, 50],
+				movingCloserSpeed: [-150, -230],
 
-			/*** These ones have to be arrays of [min,max].  ***/
-			lightStickWidth: [0.12, 0.5],
-			lightStickHeight: [1.3, 1.7],
+				/****  Anything below can be either a number or an array of [min,max] ****/
 
-			movingAwaySpeed: [60, 80],
-			movingCloserSpeed: [-120, -160],
+				// Length of the lights. Best to be less than total length
+				carLightsLength: [400 * 0.05, 400 * 0.2],
+				// Radius of the tubes
+				carLightsRadius: [0.03, 0.08],
+				// Width is percentage of a lane. Numbers from 0 to 1
+				carWidthPercentage: [0.1, 0.5],
+				// How drunk the driver is.
+				// carWidthPercentage's max + carShiftX's max -> Cannot go over 1. 
+				// Or cars start going into other lanes 
+				carShiftX: [-0.5, 0.5],
+				// Self Explanatory
+				carFloorSeparation: [0, 0.1],
 
-			/****  Anything below can be either a number or an array of [min,max] ****/
+				colors: {
+					roadColor: 0x080808,
+					islandColor: 0x0a0a0a,
+					background: 0x000000,
+					shoulderLines: 0x131318,
+					brokenLines: 0x131318,
+					/***  Only these colors can be an array ***/
+					leftCars: [0x7D0D1B, 0xA90519, 0xff102a],
+					rightCars: [0xF1EECE, 0xE6E2B1, 0xDFD98A],
+					sticks: 0xF1EECE,
+				}
+			};
 
-			// Length of the lights. Best to be less than total length
-			carLightsLength: [400 * 0.05, 400 * 0.15],
-			// Radius of the tubes
-			carLightsRadius: [0.05, 0.14],
-			// Width is percentage of a lane. Numbers from 0 to 1
-			carWidthPercentage: [0.3, 0.5],
-			// How drunk the driver is.
-			// carWidthPercentage's max + carShiftX's max -> Cannot go over 1. 
-			// Or cars start going into other lanes 
-			carShiftX: [-0.2, 0.2],
-			// Self Explanatory
-			carFloorSeparation: [0.05, 1],
+			const myApp = new App(container, options);
+			myApp.loadAssets().then(myApp.init)
+		})();
 
-			colors: {
-				roadColor: 0x080808,
-				islandColor: 0x0a0a0a,
-				background: 0x000000,
-				shoulderLines: 0x131318,
-				brokenLines: 0x131318,
-				/***  Only these colors can be an array ***/
-				leftCars: [0xE2173C, 0x841010, 0xF23D3D],
-				rightCars: [0xffffff, 0x7686BF, 0x1338B5],
-				sticks: 0xDCE0EE,
-			}
-		};
-
-		const myApp = new App(container, options);
-		myApp.loadAssets().then(myApp.init)
-	})();
 </script>
 
 
