--- a/html/dmt_login_show_varcss.html
+++ b/html/dmt_login_show_varcss.html
@@ -63,7 +63,8 @@
 		dltSetLoginPos();
 	});
 
-	dltSetLoginPos();
+	//dltSetLoginPos();
+
 		(function() {
 			const container = document.getElementById('login_app');
 
