--- a/html/dmt_login.html
+++ b/html/dmt_login.html
@@ -11,7 +11,7 @@
 	<meta name="renderer" content="webkit">
 
 	<link href="<?cs var:config.docpath?>resource/font-awesome/css/font-awesome.min.css?v=66" rel="stylesheet"/>
-	<link href="<?cs var:config.docpath?>resource/themes/css/login.css?v=24200508" rel="stylesheet" />
+	<link href="<?cs var:config.docpath?>resource/themes/css/login.css?v=34200508" rel="stylesheet" />
 	<?cs if:config.xrkmonitor_debug==1 ?>
 	<link href="<?cs var:config.docpath?>resource/layui/css/layui.css" rel="stylesheet" />
 	<?cs else ?>
@@ -45,6 +45,11 @@
             <canvas id="demo-canvas"></canvas>
 			<?cs /if ?>
 
+			<div id='login_load_proc' style='position:fixed; left:40%; top:40%;'>
+				<font style='font-size:16px; font-weight:bold'>
+					<i class="icon-spinner icon-spin icon-2x icon-fw"></i>加载中，请稍后 ……
+				</font>
+			</div>
             <div class="kit-login-box">
                 <header>
 					<a href='http://xrkmonitor.com' target='_blank'>
@@ -126,6 +131,22 @@
 
 
 <script language="javascript" type="text/javascript">
+	function dltSetLoginPos() {
+		var w = $(window).width();
+		var h = $(window).height();
+		if(w > 390) {
+			var p=(w-390)/2;
+			$(".kit-login-box").css("margin-left", ''+p+'px');
+		}
+		if(h > 300) {
+			var p=(h-300)/3;
+			$(".kit-login-box").css("margin-top", ''+p+'px');
+		}
+	}
+	$(window).resize(function(){
+		dltSetLoginPos();
+	});
+
 	var g_req_timestamp = 0;
 	var g_login_in_cust_server = 0;
 	function login_submit()
@@ -211,12 +232,20 @@
 		<?cs else ?>
 			$('#username').focus();
 		<?cs /if ?>
+
 	}).keydown(function(event){
 		if(event.keyCode==13){
 			login_submit();
 			return false;
 		}
 	});
+
+	$(window).load(function(){
+		$('#login_load_proc').fadeOut('slow');
+		dltSetLoginPos();
+		$(".kit-login-box").fadeIn('slow');
+	});
+
 </script>
 
 </body>
