--- a/html/dmt_login.html
+++ b/html/dmt_login.html
@@ -241,9 +241,9 @@
 	});
 
 	$(window).load(function(){
-		$('#login_load_proc').fadeOut('slow');
+		$('#login_load_proc').css('display', 'none');
 		dltSetLoginPos();
-		$(".kit-login-box").fadeIn('slow');
+		$(".kit-login-box").css('display', 'block');
 	});
 
 </script>
