--- a/html/dmt_log_files.html
+++ b/html/dmt_log_files.html
@@ -3,7 +3,7 @@
 		<ul class="searchContent"> 
 			<li>
 				<label>应用名称：</label>
-				<select name="dlf_appName" id="dlf_appName" style="width:160px;">
+				<select class='xrk_combox' name="dlf_appName" id="dlf_appName" style="width:160px;">
 					<option value="-">-</option>
 				</select>
 			</li>
