--- a/html/dmt_showview_bind_attr.html
+++ b/html/dmt_showview_bind_attr.html
@@ -132,7 +132,7 @@ $(document).ready(function(){
 		</ul>
 	</div>
 
-	<table class="list" width="100%" style='height:350px'>
+	<table class="list" width="100%">
 		<thead>
 			<tr>
 				<th width="22"><input type="checkbox" group="bind_attr_<?cs var:config.view_id ?>" class="checkboxCtrl"></th>
