--- a/html/dmt_warn_list.html
+++ b/html/dmt_warn_list.html
@@ -12,7 +12,7 @@
 		<div class="searchBar"> 
 			<ul class="searchContent" >
 				<li class="width:auto">
-					<label>告警状态:</label>
+					<label>处理状态:</label>
 					<select class="xrk_combox" name="dwl_deal_status_sel" id="dwl_deal_status_sel">
 						<option value="-1">全部</option>
 						<option value="0">未处理</option>
