--- a/html/resource/dwz.frag.html
+++ b/html/resource/dwz.frag.html
@@ -73,13 +73,11 @@
 <div id="alertBackground" class="alertBackground"></div>
 <div id="dialogBackground" class="dialogBackground"></div>
 
-<div id='background'></div>
-<div id='progressBar'>
-    <i class="icon-spinner icon-spin"></i>
-</div>
+<div class='background' id='aj_background'></div>
+<div class='progressBar' id='aj_progressBar'> <i class="icon-spinner icon-spin"></i>处理中，请稍后...</div>
 <!-- rock add -->
 <div id='my_background' class='background'></div>
-<div id='my_progressBar' class='progressBar'><i class="icon-spinner icon-spin"></i>数据处理中, 请稍后...</div>
+<div id='my_progressBar' class='progressBar'><i class="icon-spinner icon-spin"></i>处理中, 请稍后...</div>
 </textarea>
 <!-- dwz.pagination -->
 <textarea id="pagination"><ul>
