--- a/html/dmt_showview_not_bind_attr.html
+++ b/html/dmt_showview_not_bind_attr.html
@@ -87,8 +87,8 @@ $(document).ready(function(){
 		<div class="searchBar">
 			<ul class="searchContent">
 				<li style='width:180px'>
-					<label style='width:60px'>数据类型：</label>
-					<select class="combox" name="dsnba_attr_data_type" id="dsnba_attr_data_type_<?cs var:config.view_id ?>">
+					<label style='width:46px'>数据类型:</label>
+					<select class="xrk_combox" name="dsnba_attr_data_type" id="dsnba_attr_data_type_<?cs var:config.view_id ?>">
 						<option value="0">全部</option>
 						<option value="<?cs var:config.sum_report_m ?>">累计量</option>
 						<option value="<?cs var:config.sum_report_his ?>">历史累计量</option>
@@ -101,11 +101,11 @@ $(document).ready(function(){
 				</li>
 
 				<li>
-				    <label style='width:60px'>监控点ID：</label>
-				    <input type="text" size='6' name="dam_attr_id" value="<?cs var:config.dam_attr_id ?>">
+				    <label style='width:50px'>监控点ID:</label>
+				    <input type="text" size='7' name="dam_attr_id" value="<?cs var:config.dam_attr_id ?>">
 				</li>
 				<li>
-					<label style='width:80px'>监控点类型：</label>
+					<label style='width:60px'>监控点类型:</label>
 					<input type="hidden" name="dam_attr_type" value="<?cs var:config.dam_attr_type ?>">
 					<input type="text" size="12" name="dam_attr_type_name" value="<?cs var:config.dam_attr_type_name ?>" readonly="readonly" />
 				</li>
